--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,6 @@
             <scope>test</scope>
         </dependency>
 
-
     </dependencies>
 
     <!-- ================= BUILD ================= -->
@@ -134,7 +133,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire (Unit + Integration + Selenium kontrolü) -->
+            <!-- ✅ Düzeltilmiş Surefire Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -142,15 +141,40 @@
                 <configuration>
                     <useModulePath>false</useModulePath>
 
-                    <!-- Normalde Unit + Integration -->
+                    <!-- Rapor dizini garanti -->
+                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+
+                    <!-- Test kalıpları -->
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
 
-                    <!-- Selenium sadece profil açıkken -->
-                    <skipTests>${!selenium.tests}</skipTests>
+                    <!-- Skip logic sadeleştirildi -->
+                    <skipTests>false</skipTests>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <useModulePath>false</useModulePath>
+                    <reportsDirectory>${project.build.directory}/failsafe-reports</reportsDirectory>
+                    <includes>
+                        <include>**/*IT.java</include>
+                    </includes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
 
         </plugins>
     </build>
