--- a/src/main/java/application/resources/application.properties
+++ b/src/main/java/application/resources/application.properties
@@ -1,45 +1,25 @@
-# Uygulama ad?
+# Uygulama Ad?
 spring.application.name=WestCast
 
-# Uygulaman?n çal??aca?? port
-server.port=9090
+# Jenkinsfile ile uyumlu olmas? için varsay?lan portu 8081 yap?yoruz
+server.port=8081
 
-# Loglama ayarlar? (iste?e ba?l?)
-logging.level.root=INFO
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
-
-# Veritaban? ayarlar? (e?er veritaban? kullan?yorsan?z)
-# spring.datasource.url=jdbc:postgresql://localhost:5432/westcast
-# spring.datasource.username=kullaniciadi
-# spring.datasource.password=sifre
-# spring.datasource.driver-class-name=org.postgresql.Driver
-
-# JPA ayarlar? (e?er JPA kullan?yorsan?z)
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# R2DBC ayarlar? (e?er R2DBC kullan?yorsan?z)
-# spring.r2dbc.url=r2dbc:postgresql://localhost:5432/westcast
-# spring.r2dbc.username=kullaniciadi
-# spring.r2dbc.password=sifre
-# spring.r2dbc.pool.max-create-connection-time=PT5S
-# spring.r2dbc.pool.max-idle-time=PT10M
-# spring.r2dbc.pool.max-life-time=PT30M
-# spring.r2dbc.pool.max-acquire-time=PT5S
-# spring.r2dbc.pool.initial-size=10
-# spring.r2dbc.pool.max-size=20
-
-# Di?er yap?land?rma ayarlar? (iste?e ba?l?)
-# spring.profiles.active=dev
-# spring.messages.basename=messages
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:testdb
+# --- VER?TABANI AYARLARI (H2 In-Memory) ---
+# DB_CLOSE_DELAY=-1: Uygulama çal??t??? sürece veritaban?n?n aç?k kalmas?n? sa?lar.
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 
+# --- JPA / HIBERNATE AYARLARI ---
+# create-drop: Uygulama ba?lad???nda tablolar? s?f?rdan olu?turur, kapand???nda siler.
+# Bu ayar "User already exists" hatas?n? kökten çözer.
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-
+# --- LOGLAMA AYARLARI ---
+logging.level.root=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
